# sec-api-automation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sec_api.ipynb
docs/: google_oauth_setup.md  google_service_account_setup.md  runbook.md
examples/: tickers_10_demo.csv
src/sec_api_automation/: __init__.py  config.py  document_builder.py  drive_client.py  filing_selector.py  main.py  reporting.py  sec_client.py
